修复agent时携带错误的屏蔽协议数据，编辑转发时无法使用原分配端口